plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tradingbot'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	lombokVersion = '1.18.34'
	testcontainersVersion = '1.19.8'
}

dependencies {

	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Database
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-database-postgresql'

	testImplementation("com.h2database:h2")
	// Flyway (ВАЖНО: без версии!)
	implementation 'org.flywaydb:flyway-core:11.0.0'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'



	// Observability
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Resilience & Retry
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.retry:spring-retry'

	// Lombok
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

	// Telegram Bot
	implementation 'org.telegram:telegrambots-spring-boot-starter:6.7.0'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
	testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
	testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
tasks.named('test') {
	useJUnitPlatform()
}